HW9-final: Add Blog and Post pages, change latest-post header to links

--- a/HW9-final/index.html
+++ b/HW9-final/index.html
@@ -18,8 +18,8 @@
               <li class="navigation__item"><a href="#home" class="navigation__link current">Home
               </a></li>
               <li class="navigation__item"><a href="#portfolio" class="navigation__link">Portfolio</a></li>
-              <li class="navigation__item"><a href="#" class="navigation__link">Blog</a></li>
-              <li class="navigation__item"><a href="#" class="navigation__link">Pages</a></li>
+              <li class="navigation__item"><a href="blog.html" class="navigation__link">Blog</a></li>
+              <li class="navigation__item"><a href="post.html" class="navigation__link">Pages</a></li>
               <li class="navigation__item"><a href="#aboutUs" class="navigation__link">About</a></li>
               <li class="navigation__item"><a href="#contacts" class="navigation__link">Contact</a></li>
             </ul>
@@ -95,7 +95,7 @@
           <div class="latest-post__post">
             <div class="latest-post__preview"></div>
             <div class="latest-post__description">
-              <h3 class="latest-post__head">In the Future We Will All Live in Star Wars</h3>
+              <a class="latest-post__head">In the Future We Will All Live in Star Wars</a>
               <p class="latest-post__text">The thing you’re doing now, reading prose on a screen,
                 is going out of fashion. The defining narrative of our online moment concerns
                 the decline of text, and the exploding reach and power of audio and video…
@@ -116,7 +116,7 @@
           <div class="latest-post__post">
             <div class="latest-post__preview"></div>
             <div class="latest-post__description">
-              <h3 class="latest-post__head">Rubik’s Cube? No, Robotics and AI are…</h3>
+              <a class="latest-post__head">Rubik’s Cube? No, Robotics and AI are…</a>
               <p class="latest-post__text">In other words, I will try to de-hype the crowd about
                 the recent development in robotics. Concretely, OpenAI has claimed some pretty
                 amazing results with learning to solve the Rubik’s cube with a robotic hand…
@@ -136,7 +136,7 @@
           <div class="latest-post__post">
             <div class="latest-post__preview"></div>
             <div class="latest-post__description">
-              <h3 class="latest-post__head">How the Internet of Things will Transfo…</h3>
+              <a class="latest-post__head">How the Internet of Things will Transfo…</a>
               <p class="latest-post__text">The Internet of Things (IoT) promises to be the most
                 important technological development for consumers since the advent of the smartphone.
                 Experts believe that this collection of internet-connected technolog…
