HW14-DOM-Overview: rewrite hw14

--- a/HW14-DOM-Overview/post.html
+++ b/HW14-DOM-Overview/post.html
@@ -18,8 +18,8 @@
               <li class="navigation__item"><a href="index.html#home" class="navigation__link">Home
               </a></li>
               <li class="navigation__item"><a href="index.html#portfolio" class="navigation__link">Portfolio</a></li>
-              <li class="navigation__item"><a href="#" class="navigation__link current">Blog</a></li>
-              <li class="navigation__item"><a href="post.html" class="navigation__link">Pages</a></li>
+              <li class="navigation__item"><a href="Blog.html" class="navigation__link">Blog</a></li>
+              <li class="navigation__item"><a href="post.html" class="navigation__link current">Pages</a></li>
               <li class="navigation__item"><a href="index.html#aboutUs" class="navigation__link">About</a></li>
               <li class="navigation__item"><a href="index.html#contacts" class="navigation__link">Contact</a></li>
             </ul>
